push index.html

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sea Turtles</title>
-    <link rel="stylesheet" href="../css/homepage.css" />
+    <link rel="stylesheet" href="public/asset/css/homepage.css" />
   </head>
   <body>
   <header>
     <div class="logo">Salt & Soul</div>
     <nav>
       <ul>
-        <li><a href="homepage.html">Accueil</a></li>
-        <li><a href="qcm.php">Jeu</a></li>
+        <li><a href="index.html">Accueil</a></li>
+        <li><a href="public/asset/html/qcm.php">Jeu</a></li>
         <li>
-          <a href="podcast.html">
-            <img src="../images/microphone.png" alt="micro">
+          <a href="public/asset/html/podcast.html">
+            <img src="public/asset/images/microphone.png" alt="micro">
           </a>
         </li>
       </ul>
@@ -26,7 +26,7 @@
     <div class="tout">
       <section class="human-body">
         <div class="container">
-          <img src="../images/body-img.png" alt="Corps Humain" />
+          <img src="public/asset/images/body-img.png" alt="Corps Humain" />
           <button
             class="button heart"
             onclick="showPopup('Cœur', 'Pompe thermohaline : un processus océanographique clé qui agit comme un moteur de la circulation océanique globale. Elle joue un rôle crucial dans le transport des masses d\'eau (courants), des nutriments et de la chaleur à travers les océans.')"
