--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="public/asset/html/qcm.php">Jeu</a></li>
+        <li><a href="public/asset/html/qcm.html">Jeu</a></li>
         <li>
           <a href="public/asset/html/podcast.html">
             <img src="public/asset/images/microphone.png" alt="micro">
