--- a/public/asset/html/qcm.html
+++ b/public/asset/html/qcm.html
@@ -16,7 +16,7 @@
     <nav>
         <ul>
             <li><a href="../../../index.html">Accueil</a></li>
-            <li><a href="qcm.php">Jeu</a></li>
+            <li><a href="qcm.html">Jeu</a></li>
             <li>
                 <a href="podcast.html">
                     <img src="../images/microphone.png" alt="micro">
